tools/tests/errors/surf_type_03.experr
type 'Dict' does not support this binary operator
